<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" android:fillViewport="true"
    tools:context="android.proz.misiewicz.elkowanie.MainActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/secondaryColor"
                android:text="@string/app_name"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo2"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:hint="@string/login"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="5dp"
                android:textColor="@color/secondaryColor"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/login_field"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:hint="@string/password"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/secondaryColor"
                android:id="@+id/password_field"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/login_button"
                android:background="@color/secondaryColor"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:onClick="login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:textColor="@android:color/holo_red_light"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/no_connection"
                android:id="@+id/error_message"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:clickable="true"
            android:textColor="@color/secondaryColor"
            android:onClick="registerPage"/>
    </LinearLayout>
</ScrollView>
