<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="android.proz.misiewicz.elkowanie.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="placeholder"
            android:layout_gravity="right"
            android:textColor="@color/secondaryColor"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/username_textview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/secondaryColor"
            android:gravity="center"
            android:textSize="42sp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:background="@color/secondaryColor"
                android:text="@string/new_game"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:onClick="newGame"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@color/secondaryColor"
                android:text="@string/last_games"
                android:onClick="getResults"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:background="@color/secondaryColor"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/about"
                android:onClick="about"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:background="@color/secondaryColor"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/exit"
                android:onClick="exit"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
